--- a/views/common/topNav.ejs
+++ b/views/common/topNav.ejs
@@ -23,7 +23,7 @@
                     </a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a href="javascript:void(0);" class="nav-link ps-2 cursor-pointer">
+                    <a href="/nft/mint" class="nav-link ps-2 cursor-pointer">
                         Enroll NFT
                     </a>
                 </li>
