--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -2,9 +2,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-3 mb-5 mb-lg-0">
-                <h6 class="text-uppercase mb-2">Soft</h6>
+                <h6 class="text-uppercase mb-2">BSM</h6>
                 <p class="mb-4 pb-2">
-                    The next generation of design systems.
+                    The next generation of indie music.
                 </p>
                 <a href="javascript:;" class="text-secondary me-xl-4 me-3">
                     <span class="text-lg fab fa-facebook" aria-hidden="true"></span>
@@ -23,26 +23,13 @@
                 </a>
             </div>
             <div class="col-md-2 col-6 ms-lg-auto mb-md-0 mb-4">
-                <h6 class="text-sm">Company</h6>
+                <h6 class="text-sm">About Us</h6>
                 <ul class="flex-column ms-n3 nav">
-                    <li class="nav-item">
-                        <a class="nav-link text-secondary" href="javascript:void(0);">
-                            About Us
-                        </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link text-secondary" href="javascript:;">
-                            Careers
-                        </a>
-                    </li>
-
                     <li class="nav-item">
                         <a class="nav-link text-secondary" href="javascript:;">
                             Press
                         </a>
                     </li>
-
                     <li class="nav-item">
                         <a class="nav-link text-secondary" href="javascript:;">
                             Blog
@@ -55,26 +42,8 @@
                 <h6 class="text-sm">Pages</h6>
                 <ul class="flex-column ms-n3 nav">
                     <li class="nav-item">
-                        <a class="nav-link text-secondary" href="javascript:;">
-                            Login
-                        </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link text-secondary" href="javascript:;">
-                            Register
-                        </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link text-secondary" href="javascript:;">
-                            Add list
-                        </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link text-secondary" href="javascript:;">
-                            Contact
+                        <a class="nav-link text-secondary" href="/contact">
+                            Contact Us
                         </a>
                     </li>
                 </ul>
@@ -88,51 +57,15 @@
                             Terms
                         </a>
                     </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link text-secondary" href="javascript:;">
-                            About Us
-                        </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link text-secondary" href="javascript:;">
-                            Team
-                        </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link text-secondary" href="javascript:;">
-                            Privacy
-                        </a>
-                    </li>
                 </ul>
             </div>
 
             <div class="col-md-2 col-6 mb-md-0 mb-4">
-                <h6 class="text-sm">Resources</h6>
+                <h6 class="text-sm">Services</h6>
                 <ul class="flex-column ms-n3 nav">
                     <li class="nav-item">
                         <a class="nav-link text-secondary" href="javascript:;">
-                            Blog
-                        </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link text-secondary" href="javascript:;">
                             Service
-                        </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link text-secondary" href="javascript:;">
-                            Product
-                        </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link text-secondary" href="javascript:;">
-                            Pricing
                         </a>
                     </li>
                 </ul>
@@ -142,7 +75,7 @@
         <div class="row">
             <div class="col-8 mx-lg-auto text-lg-center">
                 <p class="text-sm text-secondary">
-                    Copyright © 2022 Soft &amp; Loopple by Creative Tim.
+                    Copyright © 2022 Soft &amp; BSM by KABC.
                 </p>
             </div>
         </div>
