--- a/views/common/topNav.ejs
+++ b/views/common/topNav.ejs
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
     <div class="container">
         <!--로고 이미지 -->
-        <a class="navbar-brand w-8" href="#" data-config-id="brand">
-            <img src="https://www.loopple.com/img/loopple-logo.png" width="80" alt="">
+        <a class="navbar-brand w-8" href="/" data-config-id="brand">
+            <img src="https://www.loopple.com/img/loopple-logo.png" width="80" onclick="gohome()">
         </a>
 
         <!-- 뭐냐.. 토글인데 안보임-->
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse w-100 pt-3 pb-2 py-lg-0" id="navigation">
             <ul class="navbar-nav navbar-nav-hover ms-auto">
                 <li class="nav-item mx-2">
-                    <a href="javascript:void(0);" class="nav-link ps-2 cursor-pointer">
+                    <a href="/nft/list" class="nav-link ps-2 cursor-pointer">
                         Show Music NFT
                     </a>
                 </li>
@@ -33,7 +33,7 @@
                     </a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a href="javascript:void(0);" class="nav-link ps-2 cursor-pointer">
+                    <a href="/contact" class="nav-link ps-2 cursor-pointer">
                         Contact Us
                     </a>
                 </li>
