--- a/views/common/topNav.ejs
+++ b/views/common/topNav.ejs
@@ -2,7 +2,7 @@
     <div class="container">
         <!--로고 이미지 -->
         <a class="navbar-brand w-8" href="/" data-config-id="brand">
-            <img src="https://www.loopple.com/img/loopple-logo.png" width="80" onclick="gohome()">
+            <img src="../img/bsm_logo.png" width="80" onclick="gohome()">
         </a>
 
         <!-- 뭐냐.. 토글인데 안보임-->
