--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -22,28 +22,29 @@
                         <div class="col-xl-4 col-lg-5 col-md-7 d-flex flex-column mx-lg-0 mx-auto">
                             <div class="card card-plain">
                                 <div class="card-header pb-0 text-left bg-transparent">
-                                    <h4 class="font-weight-bolder">Sign In</h4>
-                                    <p class="mb-0">Enter your email and password to sign in</p>
+                                    <h4 class="font-weight-bolder">Sign Up</h4>
+                                    <p class="mb-0">Enter your email and password to register</p>
                                 </div>
                                 <div class="card-body pb-3">
-                                    <form>
+                                    <form action="/user/signup" method="post">
                                         <label>Email</label>
                                         <div class="mb-3">
-                                            <input type="email" class="form-control" placeholder="Email" aria-label="Email">
+                                            <input type="email" name="_email" class="form-control" placeholder="Email" aria-label="Email" required>
                                         </div>
                                         <label>Password</label>
                                         <div class="mb-3">
-                                            <input type="password" class="form-control" placeholder="Password" aria-label="Password">
+                                            <input type="password" name="_pass" class="form-control" placeholder="Password" aria-label="Password" required>
                                         </div>
                                         <!-- kas 계좌 생성 필요 -->
-                                        <div class="form-check form-check-info text-left">
-                                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked="">
-                                            <label class="form-check-label" for="flexCheckDefault">
-                                                I agree the <a href="javascript:void(0);" class="text-dark font-weight-bolder">Terms and Conditions</a>
-                                            </label>
+                                        <label>Address</label>
+                                        <div class="mb-3">
+                                            <input type="text" name="_address" id="walletAddress" class="form-control" placeholder="Address" required>
                                         </div>
                                         <div class="text-center">
-                                            <button type="button" class="btn bg-gradient-info w-100 mt-4 mb-0">Sign up</button>
+                                            <button type="button" id="create" class="btn bg-gradient-info w-100 mt-4 mb-0">계좌 생성</button>
+                                        </div>
+                                        <div class="text-center">
+                                            <button type="submit" id="signup" class="btn bg-gradient-info w-100 mt-4 mb-0">Sign up</button>
                                         </div>
                                     </form>
                                 </div>
@@ -51,7 +52,7 @@
                                 <div class="card-footer text-center pt-0 px-lg-2 px-1">
                                     <p class="mb-4 text-sm mx-auto">
                                         Already have an account?
-                                        <a href="javascript:;" class="text-primary text-gradient font-weight-bold">Sign up</a>
+                                        <a href="/user/signin" class="text-primary text-gradient font-weight-bold">Sign In</a>
                                     </p>
                                 </div>
                             </div>
@@ -73,8 +74,35 @@
                 </div>
             </div>
         </section>
-
         <!-- footer 관련 페이지 / 각종 커뮤니티 아이콘  / 회사정보 / 페이지 / 팀 구성 / 자원 정보 등 -->
         <%- include('./common/footer')%>
     </body>
+    <script>
+        let $signup = document.querySelector("#signup");
+        let $create = document.querySelector("#create");
+        let $walletAddress = document.querySelector("#walletAddress");
+
+        $signup.style.display = "none";
+        
+        $create.addEventListener("click", () => {
+            //alert("확인");
+            fetch(`/user/getWalletAddress`).then((data) => {
+                const contentType = data.headers.get("content-type");
+                console.log(contentType);
+                if(contentType && contentType.includes("application/json")) {
+                    return data.json(); 
+                }
+                throw new TypeError("JSON 없음!");
+            })
+            .then((json) => {
+                $walletAddress.value = json.address;
+                $walletAddress.readOnly = true;
+                $signup.style.display = "";
+                $create.style.display = "none";
+            })
+            .catch((err) => 
+                console.log("원격 호출 에러 : " + err)
+            )
+        });
+    </script>
 </html>
