--- a/views/main.ejs
+++ b/views/main.ejs
@@ -31,7 +31,7 @@
                 <div class="row">
                     <div class="col-lg-6 my-auto text-white text-xl-left">
                         <h1 class="text-dark display-2 font-weight-bolder mb-4">
-                            Find your own happiness
+                            Find your own Favorite Music
                         </h1>
                         <p class="text-dark mb-0">Buy your first Music NFT purchase</p>
                         <p class="text-dark font-weight-bolder text-lg"> in BSM</p>
@@ -40,7 +40,7 @@
                     </div>
                     <!-- 메인 헤더 사진-->
                     <div class="col-lg-6">
-                        <div class="positio-absolute rounded-circle end-4 top-0 mt-n4 shadow-lg d-xl-block d-none" style="background-image: url('https://images.unsplash.com/photo-1617176756162-447320192d98?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1180&amp;q=80');width: 600px;height: 600px; background-position: center;background-size: cover;">
+                        <div class="positio-absolute rounded-circle end-4 top-0 mt-n4 shadow-lg d-xl-block d-none" style="background-image: url('../img/main_logo1.png');width: 600px;height: 600px; background-position: center;background-size: cover;">
                         </div>
                     </div>
 
