--- a/views/common/topNav.ejs
+++ b/views/common/topNav.ejs
@@ -46,7 +46,7 @@
                     </a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a href="javascript:void(0);" class="nav-link ps-2 cursor-pointer">
+                    <a href="/user/mypage" class="nav-link ps-2 cursor-pointer">
                         <i class="fa fa-user-circle" aria-hidden="true"></i>
                     </a>
                 </li>
