--- a/views/common/topNav.ejs
+++ b/views/common/topNav.ejs
@@ -52,7 +52,7 @@
                 </li>
 
                 <li class="nav-item ms-2">
-                    <a href="javascript:void(0);" class="btn bg-gradient-dark mb-0">
+                    <a href="/user/signin" class="btn bg-gradient-dark mb-0">
                         Sign in
                     </a>
                 </li>
