--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -26,20 +26,20 @@
                                     <p class="mb-0">Enter your email and password to sign in</p>
                                 </div>
                                 <div class="card-body">
-                                    <form role="form">
+                                    <form action="/user/signin" method="post" role="form">
                                         <div class="mb-3">
-                                            <input type="email" class="form-control form-control-lg" placeholder="Email" aria-label="Email" aria-describedby="email-addon">
+                                            <input type="email" name="_email" class="form-control form-control-lg" placeholder="Email" aria-label="Email" aria-describedby="email-addon">
                                         </div>
                                         <div class="mb-3">
-                                            <input type="email" class="form-control form-control-lg" placeholder="Password" aria-label="Password" aria-describedby="password-addon">
+                                            <input type="password" name="_pass" class="form-control form-control-lg" placeholder="Password" aria-label="Password" aria-describedby="password-addon">
                                         </div>
                                         <!-- 나중에 처리 - 아이디 비밀번호 자동로그인 -->
-                                        <div class="form-check form-switch">
+                                        <!-- <div class="form-check form-switch">
                                             <input class="form-check-input" type="checkbox" id="rememberMe">
                                             <label class="form-check-label" for="rememberMe">Remember me</label>
-                                        </div>
+                                        </div> -->
                                         <div class="text-center">
-                                            <button type="button" class="btn btn-lg bg-gradient-info btn-lg w-100 mt-4 mb-0">Sign in</button>
+                                            <button type="submit" class="btn btn-lg bg-gradient-info btn-lg w-100 mt-4 mb-0">Sign in</button>
                                         </div>
                                     </form>
                                 </div>
@@ -47,7 +47,7 @@
                                 <div class="card-footer text-center pt-0 px-lg-2 px-1">
                                     <p class="mb-4 text-sm mx-auto">
                                         Don't have an account?
-                                        <a href="javascript:;" class="text-primary text-gradient font-weight-bold">Sign up</a>
+                                        <a href="/user/signup" class="text-primary text-gradient font-weight-bold">Sign up</a>
                                     </p>
                                 </div>
                             </div>
